Add unspent problem to list
also take network as an argument

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "exercises": {
     "Address": "problems/address",
     "KeyGen": "problems/keygen",
+    "Unspent": "problems/unspent",
     "Transaction": "problems/transaction"
   }
 }
