Add signed transaction problem

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "Address": "problems/address",
     "KeyGen": "problems/keygen",
     "Unspent": "problems/unspent",
+    "Transaction Inputs & Outputs": "problems/txio",
     "Transaction": "problems/transaction"
   }
 }
