--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
-  "name": "bitcoinjs-adventure",
+  "name": "blockcoinjs-adventure",
   "version": "1.0.0",
-  "description": "Learn how to use bitcoinjs-lib",
+  "description": "Learn how to use blockcoinjs-lib",
   "main": "index.js",
   "bin": {
-    "bitcoinjs-adventure": "runner.js"
+    "blockcoinjs-adventure": "runner.js"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/weilu/bitcoinjs-adventure.git"
+    "url": "https://github.com/weilu/blockcoinjs-adventure.git"
   },
   "keywords": [
-    "bitcoin",
-    "bitcoinjs",
+    "blockcoin",
+    "blockcoinjs",
     "nodeschool",
     "adventure"
   ],
   "author": "Wei Lu <luwei.here@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/weilu/bitcoinjs-adventure/issues"
+    "url": "https://github.com/weilu/blockcoinjs-adventure/issues"
   },
-  "homepage": "https://github.com/weilu/bitcoinjs-adventure",
+  "homepage": "https://github.com/weilu/blockcoinjs-adventure",
   "dependencies": {
     "adventure-map": "^1.0.0",
-    "bitcoinjs-lib": "^1.1.4",
+    "blockcoinjs-lib": "^1.1.4",
     "cb-blockr": "^2.0.0",
     "prompt": "^0.2.14",
     "superagent": "^0.20.0"
